--- a/Assignment2/assign2.html
+++ b/Assignment2/assign2.html
@@ -1,7 +1,7 @@
 <html>
 
     <head>
-        <!--Test-->
+        <!--Testing-->
         <link href="game.css" rel="stylesheet" type="text/css"/>
         <script src="game.js"></script>
         
