--- a/CPI 101/Assignment2/assign2.html
+++ b/CPI 101/Assignment2/assign2.html
@@ -1,7 +1,7 @@
 <html>
 
     <head>
-        <!--This is a test commit-->
+        <!--This is a test commit 2-->
         <link href="game.css" rel="stylesheet" type="text/css"/>
         <script src="game.js"></script>
         
